--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "eslint": "8.41.0",
